force-app/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Field to determine what Record Type of Account to create</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Production Company</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Athlete</fullName>
                <isActive>false</isActive>
                <label>Athlete</label>
            </value>
            <value>
                <fullName>Named Account</fullName>
                <isActive>false</isActive>
                <label>Named Account</label>
            </value>
            <value>
                <fullName>Social</fullName>
                <isActive>false</isActive>
                <label>Social</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>