force-app/main/default/objects/Lead/fields/Clubs_and_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Clubs_and_Organizations__c</fullName>
    <label>Clubs and Organizations</label>
    <type>TextArea</type>
</CustomField>