force-app/main/default/objects/Lead/fields/Current_GPA__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA__c</fullName>
    <label>Current GPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>