force-app/main/default/objects/Lead/fields/Eligible_to_work_in_the_US__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_work_in_the_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible to work in the US?</label>
    <type>Checkbox</type>
</CustomField>