force-app/main/default/objects/Lead/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Summer 2023</fullName>
            </value>
            <value>
                <fullName>Winter 2023</fullName>
            </value>
            <value>
                <fullName>Summer 2024</fullName>
            </value>
            <value>
                <fullName>Winter 2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>