force-app/main/default/objects/Lead/fields/Graduation_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date_Text__c</fullName>
    <label>Graduation Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>