force-app/main/default/objects/Lead/fields/Instagram_Username__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Username__c</fullName>
    <label>Instagram Username</label>
    <type>TextArea</type>
</CustomField>