force-app/main/default/objects/Lead/fields/Leadership_Positions__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Positions__c</fullName>
    <label>Leadership Positions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>