force-app/main/default/objects/Lead/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <label>Minor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>