force-app/main/default/objects/Lead/fields/NextGenID__c.field-meta.xml
<CustomField>
    <fullName>NextGenID__c</fullName>
    <externalId>true</externalId>
    <label>NextGenID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>