force-app/main/default/objects/Lead/fields/nonedu_Email__c.field-meta.xml
<CustomField>
    <fullName>nonedu_Email__c</fullName>
    <label>non-.edu Email</label>
    <type>Email</type>
</CustomField>