force-app/main/default/objects/Lead/fields/of_Instagram_Followers__c.field-meta.xml
<CustomField>
    <fullName>of_Instagram_Followers__c</fullName>
    <label># of Instagram Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>