force-app/main/default/objects/Lead/fields/Outreach_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sent_Date__c</fullName>
    <label>Outreach Sent Date</label>
    <type>Date</type>
</CustomField>