force-app/main/default/objects/Lead/fields/Program_for_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Program_for_Consideration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program for Consideration</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Lead Consideration</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>