force-app/main/default/objects/Lead/fields/Source_Department__c.field-meta.xml
<CustomField>
    <fullName>Source_Department__c</fullName>
    <label>Source Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Brands US</fullName>
            </value>
            <value>
                <fullName>Brands UK</fullName>
            </value>
            <value>
                <fullName>Brands Middle East</fullName>
            </value>
            <value>
                <fullName>Brands Canada</fullName>
            </value>
            <value>
                <fullName>Experiential US</fullName>
            </value>
            <value>
                <fullName>Experiential EMEA</fullName>
            </value>
            <value>
                <fullName>Properties US</fullName>
            </value>
            <value>
                <fullName>Properties INTL</fullName>
            </value>
            <value>
                <fullName>Properties Projects</fullName>
            </value>
            <value>
                <fullName>Golf Events and Hospitality</fullName>
            </value>
            <value>
                <fullName>Golf Management</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
            <value>
                <fullName>Global Football</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>Action Sports Athletes</fullName>
            </value>
            <value>
                <fullName>The Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>