force-app/main/default/objects/Lead/fields/Source_Division__c.field-meta.xml
<CustomField>
    <fullName>Source_Division__c</fullName>
    <label>Source Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Talent Representation</fullName>
            </value>
            <value>
                <fullName>Undertone</fullName>
            </value>
            <value>
                <fullName>Eurosport</fullName>
            </value>
            <value>
                <fullName>ESPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>