force-app/main/default/objects/Lead/fields/Sport_Field__c.field-meta.xml
<CustomField>
    <fullName>Sport_Field__c</fullName>
    <label>Sport/Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Talent_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Hockey</fullName>
            </value>
            <value>
                <fullName>Snowboarding</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Actor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Racing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>