force-app/main/default/objects/Lead/fields/Study_Abroad_Plans__c.field-meta.xml
<CustomField>
    <fullName>Study_Abroad_Plans__c</fullName>
    <label>Study Abroad Plans</label>
    <length>100</length>
    <type>Text</type>
</CustomField>