force-app/main/default/objects/Lead/fields/Talent_Division__c.field-meta.xml
<CustomField>
    <fullName>Talent_Division__c</fullName>
    <label>Talent Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Global Football</fullName>
            </value>
            <value>
                <fullName>Action Sports</fullName>
            </value>
            <value>
                <fullName>Team Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>