force-app/main/default/objects/Lead/fields/TikTok_Handle__c.field-meta.xml
<CustomField>
    <fullName>TikTok_Handle__c</fullName>
    <label>TikTok Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>