force-app/main/default/objects/Lead/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <label>Trade Show</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Electronics Show 2011</fullName>
            </value>
            <value>
                <fullName>IEG Sponsorship Conference</fullName>
            </value>
            <value>
                <fullName>NACS</fullName>
            </value>
            <value>
                <fullName>Social Media Conference - Boston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>