force-app/main/default/objects/Lead/recordTypes/Laundry_Service_Cycle.recordType-meta.xml
<RecordType>
    <fullName>Laundry_Service_Cycle</fullName>
    <active>true</active>
    <businessProcess>Laundry Service Cycle</businessProcess>
    <description>Laundry Service/Cycle Lead Record Type</description>
    <label>Laundry Service Cycle</label>
</RecordType>