force-app/main/default/objects/Lead/recordTypes/Talent_Brand.recordType-meta.xml
<RecordType>
    <fullName>Talent_Brand</fullName>
    <active>true</active>
    <businessProcess>Talent - Brand</businessProcess>
    <label>Talent - Brand</label>
</RecordType>