force-app/main/default/objects/Lead/recordTypes/Talent_Representation.recordType-meta.xml
<RecordType>
    <fullName>Talent_Representation</fullName>
    <active>true</active>
    <businessProcess>Talent - Representation</businessProcess>
    <label>Talent - Representation</label>
</RecordType>